--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,8 +1,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-<nav class="heder">
+    <nav class="heder">
+    <input type="checkbox" id="menu-toggle" md-hidden>
+    <label for="menu-toggle" class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
     <div class="logo">
         <i class="fas fa-car"></i> Automotive
     </div>
