--- a/src/app/collection/collection.html
+++ b/src/app/collection/collection.html
@@ -62,6 +62,10 @@
 </div> -->
 
 <div class="main">
+  <input type="checkbox" id="menu-btn" style="display:none;">
+<label for="menu-btn" class="hamburger-icon" style="color:white; font-size:30px; cursor:pointer; display:none;">
+    ☰
+</label>
   <div class="filters">
     <button (click)="filterCars('all')" [class.active]="activeCategory() === 'all'">ALL</button>
     <button (click)="filterCars('sports')" [class.active]="activeCategory() === 'sports'">SPORTS</button>
