--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -19,7 +19,7 @@
                 <p>+91 8849669921</p>
             </li>
             <li>
-                <strong>Email</strong>
+                <strong>Email address</strong>
                 <p>yashvaghasiya2006@gmail.com</p>
             </li>
         </ul>
