--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,5 +1,5 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <div class="main-container">
   <div class="form-section">
     <div class="brand-info">
@@ -37,11 +37,18 @@
         </div>
         <button class="btn-primary" (click)="onLogin()">Sign In <span class="arrow">&rarr;</span></button>
         <div class="divider"><span>OR CONTINUE WITH</span></div>
-        <div class="social-login">
-          <button class="social-btn"><img src="https://www.gstatic.com/images/branding/product/1x/googleg_48dp.png" alt="Google"></button>
-          <button class="social-btn"><span class="material-icons"><img src="icon-login/github.png" alt=""></span></button>
-          <button class="social-btn"><span class="material-icons"><img src="icon-login/apple.png" alt=""></span></button>
-        </div>
+      <div class="social-login">
+  <button class="social-btn" (click)="loginWithGoogle()">
+    <img src="https://www.gstatic.com/images/branding/product/1x/googleg_48dp.png" alt="Google">
+  </button>
+  
+  <button class="social-btn">
+    <span class="material-icons"><img src="icon-login/github.png" alt=""></span>
+  </button>
+  <button class="social-btn">
+    <span class="material-icons"><img src="icon-login/apple.png" alt=""></span>
+  </button>
+</div>
         <p class="footer-text">Don't have an account? <a (click)="switchView('signup')">Create account</a></p>
       </div>
 
